<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_new_order" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_assignment_turned_in_black_24dp"
        android:title="@string/title_view_all" />

    <item
        android:id="@+id/navigation_add_person"
        android:icon="@drawable/ic_person_add_black_24dp"
        android:title="@string/title_add_person" />

    <item
        android:id="@+id/navigation_view_summary"
        android:icon="@drawable/ic_assessment_black_24dp"
        android:title="@string/title_view_summary" />

</menu>
